--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Document</title>
     <link href="style.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <script href="script.js" defer> </script>
+    <script src="script.js" defer> </script>
 </head>
 
 <body>
@@ -17,20 +17,23 @@
         <header>
 
             <nav class="main-nav">
-                <div class="head-logo">
-                    <img class="logo" src="img/b-logo-1180x885-removebg-preview.png">
-                </div>
-                <div id="mySidepanel" class="sidepanel">
-                    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
-                    <a href="#">Home</a>
-                    <a href="#">Top Stories</a>
-                    <a href="#">Guide</a>
+                <!--                <img class="logo" src="img/b-logo-1180x885-removebg-preview.png">-->
+                <div id="mySidebar" class="sidebar">
+                    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+                    <a href="#">About</a>
+                    <a href="#">Services</a>
+                    <a href="#">Clients</a>
                     <a href="#">Contact</a>
                 </div>
-                <button class="openbtn" onclick="openNav()">☰</button>
+
+                <div id="main">
+                    <button class="openbtn" onclick="openNav()"> &#9776; </button>
+                </div>
             </nav>
 
         </header>
 
     </div>
-</body></html>
+</body>
+
+</html>
