--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <header>
 
             <nav class="main-nav">
-                <!--                <img class="logo" src="img/b-logo-1180x885-removebg-preview.png">-->
+                <img class="logo" src="img/b-logo-1180x885-removebg-preview.png">
                 <div id="mySidebar" class="sidebar">
                     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
                     <a href="#">About</a>
@@ -34,6 +34,4 @@
         </header>
 
     </div>
-</body>
-
-</html>
+</body></html>
