--- a/about.html
+++ b/about.html
@@ -21,10 +21,10 @@
                 <img class="logo" src="img/b-logo-1180x885-removebg-preview.png">
                 <div id="mySidebar" class="sidebar">
                     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-                    <a href="#">About</a>
-                    <a href="#">Services</a>
-                    <a href="#">Clients</a>
-                    <a href="#">Contact</a>
+                    <a href="home.html">Home</a>
+                    <a href="guide.html">Guides</a>
+                    <a href="contact.html">Contact Us</a>
+                    <a href="about.html">About Us</a>
                 </div>
 
                 <div id="main">
@@ -33,6 +33,10 @@
             </nav>
 
         </header>
+
+    </div>
+    <div class="main-content">
+        <h1> About</h1>
 
     </div>
 </body></html>
