--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <img class="logo" src="img/b-logo-1180x885-removebg-preview.png">
                 <div id="mySidebar" class="sidebar">
                     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-                    <a href="home.html">Home</a>
+                    <a href="index.html">Home</a>
                     <a href="guide.html">Guides</a>
                     <a href="contact.html">Contact Us</a>
                     <a href="about.html">About Us</a>
