--- a/index.html
+++ b/index.html
@@ -21,6 +21,14 @@
                 <img class="logo" src="img/b-logo-1180x885-removebg-preview.png">
                 <div id="mySidebar" class="sidebar">
                     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+                    <form class="search-flex">
+                        <input type="search" autocomplete="off" id="header-search-bar" class="search-bar">
+                        <button class="search-button"> <i class="material-icons">
+                                search
+                            </i></button>
+
+                    </form>
+
                     <a href="index.html">Home</a>
                     <a href="guide.html">Guides</a>
                     <a href="contact.html">Contact Us</a>
@@ -40,6 +48,7 @@
             <h1 class="hero-text"> The Democratic Debate is here </h1>
             <h2 class="hero-btn"> <a href="#"> Learn More</a></h2>
         </div>
+
 
     </div>
 </body></html>
