--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400&display=swap" rel="stylesheet">
     <script src="script.js" defer> </script>
+    <script src="data.js" defer></script>
 </head>
 
 <body>
@@ -21,14 +22,12 @@
                 <img class="logo" src="img/b-logo-1180x885-removebg-preview.png">
                 <div id="mySidebar" class="sidebar">
                     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-                    <form class="search-flex">
+                    <div class="search-flex">
                         <input type="search" autocomplete="off" id="header-search-bar" class="search-bar">
-                        <button class="search-button"> <i class="material-icons">
+                        <button class="search-btn"> <i class="material-icons">
                                 search
                             </i></button>
-
-                    </form>
-
+                    </div>
                     <a href="index.html">Home</a>
                     <a href="guide.html">Guides</a>
                     <a href="contact.html">Contact Us</a>
@@ -48,7 +47,9 @@
             <h1 class="hero-text"> The Democratic Debate is here </h1>
             <h2 class="hero-btn"> <a href="#"> Learn More</a></h2>
         </div>
+        <ul>
 
+        </ul>
 
     </div>
 </body></html>
