--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Document</title>
     <link href="style.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500&display=swap" rel="stylesheet">
     <script src="script.js" defer> </script>
     <script src="data.js" defer></script>
 </head>
@@ -32,6 +32,15 @@
                     <a href="guide.html">Guides</a>
                     <a href="contact.html">Contact Us</a>
                     <a href="about.html">About Us</a>
+
+                    <div class="account-form-flex">
+                        <button class="account-btn">
+                            <h3>Sign-Up</h3>
+                        </button>
+                        <button class="account-btn2">
+                            <h3> Login</h3>
+                        </button>
+                    </div>
                 </div>
 
                 <div id="main">
@@ -44,12 +53,55 @@
     </div>
     <div class="main-content">
         <div class="hero-img">
-            <h1 class="hero-text"> The Democratic Debate is here </h1>
+            <h1 class="hero-text"> The Democratic Debate is Here </h1>
             <h2 class="hero-btn"> <a href="#"> Learn More</a></h2>
         </div>
-        <ul>
+        <div class="progress-box-flex">
+            <div class="course-promt">
+                <h3>JUMP BACK INTO YOUR COURSES</h3>
+            </div>
+            <div class="course-details">
+                <div class="progress-flex">
+                    <div class="progress-promt">
+                        <p class="progress-promt-text">Learn GOV 101</p>
+                    </div>
+                    <div class="progress-completion">
+                        <p class="progress-promt-percent">45%</p>
+                    </div>
+                </div>
+                <p class="progress-prompt-location"> Currently on <span> Checks and Balances </span> </p>
+                <div class="progress-tags">
+                    <div class="progress-tag-row">
+                        <i class="material-icons">
+                            account_balance
+                        </i>
+                        <p class="row-name"> Lesson</p>
+                        <p class="row-title"> Checks & Balances </p>
 
-        </ul>
+                    </div>
+                    <div class="progress-tag-row">
+                        <i class="material-icons">
+                            create
+                        </i>
+                        <p class="row-name"> Lesson</p>
+                        <p class="row-title"> Checks & Balances </p>
+
+                    </div>
+                    <div class="progress-tag-row">
+                        <i class="material-icons">
+                            library_books
+                        </i>
+                        <p class="row-name"> Lesson</p>
+                        <p class="row-title"> Checks & Balances </p>
+                    </div>
+
+
+
+                </div>
+
+            </div>
+
+        </div>
 
     </div>
 </body></html>
