--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
         <div class="progress-box-flex">
             <div class="course-promt">
                 <h3>JUMP BACK INTO YOUR COURSES</h3>
+<!--box 1-->
             </div>
             <div class="course-details">
                 <div class="progress-flex">
@@ -72,36 +73,89 @@
                 <p class="progress-prompt-location"> Currently on <span> Checks and Balances </span> </p>
                 <div class="progress-tags">
                     <div class="progress-tag-row">
-                        <i class="material-icons">
+                        <i class="material-icons" id="dif-material-icon">
                             account_balance
                         </i>
-                        <p class="row-name"> Lesson</p>
-                        <p class="row-title"> Checks & Balances </p>
-
+                        <div class="flex-title-name">
+                            <p class="row-name"> Government</p>
+                            <p class="row-title"> Gov System </p>
+                        </div>
                     </div>
                     <div class="progress-tag-row">
-                        <i class="material-icons">
+                        <i class="material-icons" id="progress-icons">
                             create
                         </i>
-                        <p class="row-name"> Lesson</p>
-                        <p class="row-title"> Checks & Balances </p>
-
+                        <div class="flex-title-name">
+                            <p class="row-name"> Quiz</p>
+                            <p class="row-title"> Gov Basics</p>
+                        </div>
                     </div>
                     <div class="progress-tag-row">
-                        <i class="material-icons">
+                        <i class="material-icons" id="progress-icons">
                             library_books
                         </i>
-                        <p class="row-name"> Lesson</p>
-                        <p class="row-title"> Checks & Balances </p>
+                        <div class="flex-title-name">
+                            <p class="row-name"> Lesson</p>
+                            <p class="row-title"> Checks & Balances </p>
+                        </div>
                     </div>
 
 
 
                 </div>
-
+                <button class="progress-box-btn"> <a href="#" class="progress-btn">Resume</a> <i class="material-icons" id="resume-icon">
+                        arrow_forward
+                    </i> </button>
             </div>
+<!--Box 2-->
+                        <div class="course-details">
+                <div class="progress-flex">
+                    <div class="progress-promt">
+                        <p class="progress-promt-text">Political Party</p>
+                    </div>
+                    <div class="progress-completion">
+                        <p class="progress-promt-percent">85%</p>
+                    </div>
+                </div>
+                <p class="progress-prompt-location"> Currently on <span> Republican </span> </p>
+                <div class="progress-tags">
+                    <div class="progress-tag-row">
+                        <i class="material-icons" id="dif-material-icon">
+                            account_balance
+                        </i>
+                        <div class="flex-title-name">
+                            <p class="row-name"> Government</p>
+                            <p class="row-title"> Republic </p>
+                        </div>
+                    </div>
+                    <div class="progress-tag-row">
+                        <i class="material-icons" id="progress-icons">
+                            create
+                        </i>
+                        <div class="flex-title-name">
+                            <p class="row-name"> Quiz</p>
+                            <p class="row-title"> Difference in Parties</p>
+                        </div>
+                    </div>
+                    <div class="progress-tag-row">
+                        <i class="material-icons" id="progress-icons">
+                            library_books
+                        </i>
+                        <div class="flex-title-name">
+                            <p class="row-name"> Lesson</p>
+                            <p class="row-title"> Republic  </p>
+                        </div>
+                    </div>
 
+
+
+                </div>
+                <button class="progress-box-btn"> <a href="#" class="progress-btn">Resume</a> <i class="material-icons" id="resume-icon">
+                        arrow_forward
+                    </i> </button>
+            </div>
         </div>
+        
 
     </div>
 </body></html>
