--- a/index.html
+++ b/index.html
@@ -56,10 +56,20 @@
             <h1 class="hero-text"> The Democratic Debate is Here </h1>
             <h2 class="hero-btn"> <a href="#"> Learn More</a></h2>
         </div>
+        <div class="story-headlines">
+            <div class="headline"><a href="#">SoulCycle owner can't have it both ways on Trump</a></div>
+            <div class="headline"><a href="#">Bulletproof backpacks will not save my son</a></div>
+            <div class="headline"><a href="#">No one is coming to save us from this </a></div>
+            <div class="headline"><a href="#">Trump's extremely weak choice for UN ambassador</a></div>
+            <div class="headline"><a href="#">NRA member: Enough is enough. Do something</a></div>
+
+
+        </div>
+        <!--course progress section-->
         <div class="progress-box-flex">
             <div class="course-promt">
                 <h3>JUMP BACK INTO YOUR COURSES</h3>
-<!--box 1-->
+                <!--box 1-->
             </div>
             <div class="course-details">
                 <div class="progress-flex">
@@ -107,8 +117,8 @@
                         arrow_forward
                     </i> </button>
             </div>
-<!--Box 2-->
-                        <div class="course-details">
+            <!--Box 2-->
+            <div class="course-details">
                 <div class="progress-flex">
                     <div class="progress-promt">
                         <p class="progress-promt-text">Political Party</p>
@@ -143,7 +153,7 @@
                         </i>
                         <div class="flex-title-name">
                             <p class="row-name"> Lesson</p>
-                            <p class="row-title"> Republic  </p>
+                            <p class="row-title"> Republic </p>
                         </div>
                     </div>
 
@@ -155,7 +165,7 @@
                     </i> </button>
             </div>
         </div>
-        
+
 
     </div>
 </body></html>
