finished home page

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="style.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500&display=swap" rel="stylesheet">
+    <link href="https://cdn.iconmonstr.com/1.3.0/css/iconmonstr-iconic-font.min.css" rel="stylesheet">
     <script src="script.js" defer> </script>
     <script src="data.js" defer></script>
 </head>
@@ -17,7 +18,7 @@
 
     <div class="main-container">
         <header>
-
+            <!--NavBar-->
             <nav class="main-nav">
                 <img class="logo" src="img/b-logo-1180x885-removebg-preview.png">
                 <div id="mySidebar" class="sidebar">
@@ -52,10 +53,12 @@
 
     </div>
     <div class="main-content">
+        <!--hero-img-->
         <div class="hero-img">
             <h1 class="hero-text"> The Democratic Debate is Here </h1>
             <h2 class="hero-btn"> <a href="#"> Learn More</a></h2>
         </div>
+        <!--storyheadlines-->
         <div class="story-headlines">
             <div class="headline"><a href="#">SoulCycle owner can't have it both ways on Trump</a></div>
             <div class="headline"><a href="#">Bulletproof backpacks will not save my son</a></div>
@@ -66,9 +69,9 @@
 
         </div>
         <!--course progress section-->
-        <div class="progress-box-flex">
-            <div class="course-promt">
-                <h3>JUMP BACK INTO YOUR COURSES</h3>
+        <div class="box-flex">
+            <div class="prompt">
+                <h3 class="course-alert">JUMP BACK INTO YOUR COURSES</h3>
                 <!--box 1-->
             </div>
             <div class="course-details">
@@ -166,6 +169,117 @@
             </div>
         </div>
 
+        <div class="box-flex">
+            <!--course suggestions-->
+            <div class="prompt">
+                <h3>New & Noteworthy</h3>
+            </div>
+            <!--            courese box 1-->
+            <div class="course-box">
+                <div class="course-text-box">
+                    <p class="course-text"> Course</p>
+                </div>
+                <div class="course-title-box">
+                    <h3 class="course-title">Course Title</h3>
+                </div>
+                <div class="course-disc">
+                    <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim ven</p>
+                </div>
+            </div>
+            <!--course box two-->
+            <div class="course-box">
+                <div class="course-text-box">
+                    <p class="course-text"> Course</p>
+                </div>
+                <div class="course-title-box">
+                    <h3 class="course-title">Course Title</h3>
+                </div>
+                <div class="course-disc">
+                    <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim ven</p>
+                </div>
+            </div>
+            <!--course box three-->
+            <div class="course-box">
+                <div class="course-text-box">
+                    <p class="course-text"> Course</p>
+                </div>
+                <div class="course-title-box">
+                    <h3 class="course-title">Course Title</h3>
+                </div>
+                <div class="course-disc">
+                    <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim ven</p>
+                </div>
+            </div>
+        </div>
+        <!--community contacts-->
+        <div class="community-contact-flex" id="community">
+            <div class="prompt">
+                <h3>Community</h3>
+            </div>
+            <div class="card-grid">
+                <i class="im im-facebook"></i>
+                <!--facebook card-->
+                <div class="card-details">
+                    <div class="card-title">
+                        FACEBOOK GROUP
+                    </div>
+                    <div class="card-details">
+                        What's it like to learn Politics? Find out in our Facebook group.
+                    </div>
+                    <div class="card-link-div">
+                        <a class="card-link"> Join our Facebook Group</a>
+                    </div>
 
+                </div>
+            </div>
+            <!--Reddit card-->
+            <div class="card-grid">
+                <i class="im im-reddit"></i>
+                <div class="card-details">
+                    <div class="card-title">
+                        REDDIT FORUM
+                    </div>
+                    <div class="card-details">
+                        Talk to other users and discuss our website and politics in our Reddit!
+                    </div>
+                    <div class="card-link-div">
+                        <a class="card-link"> Join our Reddit Forum</a>
+                    </div>
+
+                </div>
+            </div>
+            <!--Twitter card-->
+            <div class="card-grid">
+                <i class="im im-twitter"></i>
+                <div class="card-details">
+                    <div class="card-title">
+                        TWITTER FEED
+                    </div>
+                    <div class="card-details">
+                        Follow our Twitter feed for daily Tweets on our website and important daily new!
+                    </div>
+                    <div class="card-link-div">
+                        <a class="card-link"> Join our Twitter Feed</a>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+        <footer>
+            <div class="footer-content">
+                <div class="legal-form-link">
+                    <div class="privacy-policy">
+                        <p><a>Privacy Policy</a> <span class="devider">|</span> <a> Terms</a></p>
+                    </div>
+
+                </div>
+                <div class="made-in-tags">
+                    Made with ❤️ in ASC©
+                </div>
+
+            </div>
+
+
+        </footer>
     </div>
 </body></html>
