article page finished

--- a/article.html
+++ b/article.html
@@ -58,6 +58,13 @@
 		<div class="spacer">
 
 		</div>
+		<div class="callout">
+			<div class="callout-header">Pre-Article</div>
+			<span class="closebtn" onclick="this.parentElement.style.display='none';">×</span>
+			<div class="callout-container">
+				<p>The pre-article was created to give you some prior knowledge of the article that is about to be read to give you a stronger understanding. (Reading through it is highly recommended).</p>
+			</div>
+		</div>
 		<div class="pre-article">
 			<h2 class="pre-article-title">Pre-Article</h2>
 
@@ -72,6 +79,7 @@
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 			</div>
 			<button class="collapsible">Open Section 2</button>
+
 			<div class="content">
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 			</div>
@@ -80,7 +88,43 @@
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 			</div>
 		</div>
+
 		<div class="article">
+			<div class="hero-img">
+
+			</div>
+			<div class="article-blurb">
+				<h4>Democratic presidential hopefuls on stage ahead of the second night of Democratic primary debate in Detroit, Michigan, on July 31, 2019.</h4>
+			</div>
+			<div class="article-title">
+				<h1>The Democratic Debates are Coming to an End! </h1>
+				<h6 class="author"> Stolen From: Vox.com</h6>
+			</div>
+			<div class="article-text">
+				<p id="PnA8UQ">Round two, night two of the <a href="https://www.vox.com/2019/7/30/20747246/democratic-debate-july-30-31-2019-schedule-news-updates">2020 Democratic presidential debates</a> featured a matchup between two candidates who openly clashed in June’s debate: former Vice President <a href="https://www.vox.com/2019/4/25/18185060/joe-biden-2020-presidential-election-campaign-policies">Joe Biden</a> and Sen. <a href="https://www.vox.com/2019/6/26/18679408/kamala-harris-2020-presidential-campaign-policies">Kamala Harris</a>. Before the proceedings even began, Biden leaned over to Harris and requested, “Go easy on me, kid.”</p>
+				<br>
+				<p>Harris did not. And neither did Sen. <a href="https://www.vox.com/policy-and-politics/2019/2/1/18173263/cory-booker-2020-presidential-campaign-policies">Cory Booker</a>. Harris continued her attacks on Biden’s records on desegregation busing, and Booker brought a brutal attack on Biden’s “tough on crime” record in the Senate, to the point of directly assigning Biden blame for nonviolent drug criminals who remain behind bars. Former HUD Secretary <a href="https://www.vox.com/2019/1/12/18179679/julian-castro-2020-presidential-campaign-policies">Julián Castro</a> brought the fight to Biden on immigration, and Washington Gov. <a href="https://www.vox.com/2019/3/1/18222700/jay-inslee-2020-campaign-president-policies-climate-change">Jay Inslee</a> did the same on climate change.</p>
+				<br>
+				<p id="ejlQ48">But Harris herself also was<strong> </strong>the focus of attacks, and New York City Mayor <a href="https://www.vox.com/policy-and-politics/2019/6/21/18693091/bill-de-blasio-president-debate-new-york">Bill de Blasio</a> faced a surprising number of tough questions about his record on lead poisoning in public housing and police brutality.</p>
+			</div>
+			<div class="submit-questions">
+				<div class="prompt">
+					<h4 class="submit-question-prompt">Click <a class="qna-link">Here</a> to Contact Us for Q&A on this Article</h4>
+				</div>
+
+			</div>
+			<div class="recommended-articles">
+				<div class="article-rec">
+					<h5 class="article-rec-title"> Gun Violence</h5>
+					<h3 class="article-rec-desc">Here's where every 2020 canidate stands on guns </h3>
+				</div>
+				<div class="article-rec" id="article-rec-def">
+					<h5 class="article-rec-title"> Politics and Policy</h5>
+					<h3 class="article-rec-desc">Trump again boosts a baseless conspiracy theory,this one about Jeffery Epstein </h3>
+				</div>
+
+
+			</div>
 
 
 		</div>
