responsive fixed footer

--- a/article.html
+++ b/article.html
@@ -120,7 +120,7 @@
 				</div>
 				<div class="article-rec" id="article-rec-def">
 					<h5 class="article-rec-title"> Politics and Policy</h5>
-					<h3 class="article-rec-desc">Trump again boosts a baseless conspiracy theory,this one about Jeffery Epstein </h3>
+					<h3 class="article-rec-desc">Trump again boosts a baseless conspiracy theory. </h3>
 				</div>
 
 
