--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 							</i></button>
 					</div>
 					<a href="index.html">Home</a>
-					<a href="guide.html">Guides</a>
+					<a href="chatList.html">Chat Room</a>
 					<a href="contact.html">Contact Us</a>
 					<a href="about.html">About Us</a>
 
