--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
 	<link href="https://cdn.iconmonstr.com/1.3.0/css/iconmonstr-iconic-font.min.css" rel="stylesheet">
 	<script src="script.js" defer> </script>
 	<script src="data.js" defer></script>
+
 </head>
 
 <body>
-
 	<div class="main-container">
 		<header>
 			<!--NavBar-->
 			<nav class="main-nav">
-				<img class="logo" src="img/b-logo-1180x885-removebg-preview.png">
+				<img class="logo" src="\img\Capture.PNG">
 				<div id="mySidebar" class="sidebar">
 					<a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
 					<div class="search-flex">
@@ -49,7 +49,7 @@
 				</div>
 			</nav>
 
-		</header>z
+		</header>
 
 	</div>
 	<div class="main-content">
