--- a/template.html
+++ b/template.html
@@ -20,7 +20,7 @@
         <header>
             <!--NavBar-->
             <nav class="main-nav">
-                <img class="logo" src="img/b-logo-1180x885-removebg-preview.png">
+                <img class="logo" src="\img\Capture.PNG">
                 <div id="mySidebar" class="sidebar">
                     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
                     <div class="search-flex">
