--- a/chatList.html
+++ b/chatList.html
@@ -21,7 +21,7 @@
 		<header>
 			<!--NavBar-->
 			<nav class="main-nav">
-				<img class="logo" src="\img\Capture.PNG">
+				<img class="logo" src="img/Capture.PNG">
 				<div id="mySidebar" class="sidebar">
 					<a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
 					<div class="search-flex">
@@ -31,7 +31,7 @@
 							</i></button>
 					</div>
 					<a href="index.html">Home</a>
-					<a href="guide.html">Chat Room</a>
+					<a href="guide.html">Chat's</a>
 					<a href="contact.html">Contact Us</a>
 					<a href="about.html">About Us</a>
 
@@ -108,8 +108,11 @@
 				</div>
 
 				<div class="Chat">
+					<a href="chatRoom.html">
+							<h1>What I find hard to understand is why blah blah is trying to bleep blop.</h1>
+					</a>
 
-					<h1>Chat 5</h1>
+					
 				</div>
 
 				<div class="Chat">
