--- a/chatRoom.html
+++ b/chatRoom.html
@@ -37,6 +37,7 @@
 		};
 		// Initialize Firebase
 		firebase.initializeApp(firebaseConfig);
+
 	</script>
 </head>
 
@@ -46,7 +47,7 @@
 		<header>
 			<!--NavBar-->
 			<nav class="main-nav">
-				<!--				<img class="logo" src=\img\logo.jpg">-->
+				<img class="logo" src="img/Capture.PNG">
 
 				<div id="mySidebar" class="sidebar">
 					<a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
@@ -58,7 +59,7 @@
 					</div>
 
 					<a href="index.html">Home</a>
-					<a href="guide.html">Chat Room</a>
+					<a href="guide.html">Chats</a>
 					<a href="contact.html">Contact Us</a>
 					<a href="about.html">About Us</a>
 
@@ -122,7 +123,7 @@
 					<p> Lorem ipsum dolor sit amet, sit omnium eloquentiam ad, ei inani congue maluisset vix. At audiam oportere maluisset per, vide feugait mei ad. In populo inermis comprehensam sed. Cu sale putant incorrupte has, sonet menandri disputando an eos.</p>
 				</div>
 				<div class="comment-actions">
-					<span class="view-comment-btn"> 4 Comments </span>
+					<span class="view-comment-btn"> 5 Comments </span>
 					<span class="reply-comment-btn"> Reply <i class="material-icons" id="forum-reply-btn">
 							chat_bubble
 						</i> </span>
@@ -135,7 +136,7 @@
 
 					</div>
 					<div class="profile-author">
-						<span> WhereIsIsaiah4</span>
+						<span> WhereIs______4</span>
 					</div>
 				</div>
 				<div class="comment-text">
@@ -143,7 +144,7 @@
 
 				</div>
 				<div class="comment-actions">
-					<span class="view-comment-btn"> 4 Comments </span>
+					<span class="view-comment-btn"> 3 Comments </span>
 					<span class="reply-comment-btn"> Reply <i class="material-icons" id="forum-reply-btn">
 							chat_bubble
 						</i> </span>
@@ -169,4 +170,6 @@
 
 	</form>
 
-</body></html>
+</body>
+
+</html>
