--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <html lang="en">
 
 <head>
@@ -20,7 +21,7 @@
 		<header>
 			<!--NavBar-->
 			<nav class="main-nav">
-				<img class="logo" src="\img\Capture.PNG">
+				<img class="logo" src="img/Capture.PNG">
 				<div id="mySidebar" class="sidebar">
 					<a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
 					<div class="search-flex">
@@ -30,7 +31,7 @@
 							</i></button>
 					</div>
 					<a href="index.html">Home</a>
-					<a href="chatList.html">Chat Room</a>
+					<a href="chatList.html">Chats</a>
 					<a href="contact.html">Contact Us</a>
 					<a href="about.html">About Us</a>
 
