--- a/template.html
+++ b/template.html
@@ -20,7 +20,7 @@
         <header>
             <!--NavBar-->
             <nav class="main-nav">
-                <img class="logo" src="\img\Capture.PNG">
+                <img class="logo" src="https://www.washingtonpost.com/resizer/l0oCu0gt1Lm8Q4rSAiQdu8A2QaE=/1484x0/arc-anglerfish-washpost-prod-washpost.s3.amazonaws.com/public/CASLCTVV5EI6TLGIDWCHXLGKOM.jpg">
                 <div id="mySidebar" class="sidebar">
                     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
                     <div class="search-flex">
@@ -30,7 +30,7 @@
                             </i></button>
                     </div>
                     <a href="index.html">Home</a>
-                    <a href="guide.html">Chat Room</a>
+                    <a href="guide.html">Chats</a>
                     <a href="contact.html">Contact Us</a>
                     <a href="about.html">About Us</a>
 
