--- a/article.html
+++ b/article.html
@@ -69,23 +69,23 @@
 			<h2 class="pre-article-title">Pre-Article</h2>
 
 
-			<button class="collapsible">Open Collapsible</button>
+			<button class="collapsible">What is the Democratic Debate?</button>
 			<div class="content">
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+				<p>The Democratic Debate is a staged debate with the intend of giving various Democratic canadiates a opportunity to voice they opinions on different subjects.</p>
 			</div>
 
-			<button class="collapsible">Open Section 1</button>
+			<button class="collapsible">Who was involved in the Democratic Debate?</button>
 			<div class="content">
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+				<p>The 2019 Democratic Debate featured Fromer Vice President Joseph R. Biden Jr., Senator Cory Booker of New Jersey, Mayor Pete Buttigieg of South Bend Ind, Senator Kamala Harris of California, Senator Amy Klobuchar of Minnesota, Former Representative Bete O'Rourke of Texas , Senator Bernie Sanders of Vermont, and Senator Elizabeth Warren of Massachusetts.  </p>
 			</div>
-			<button class="collapsible">Open Section 2</button>
+			<button class="collapsible">Why is the Democratic Debate important?</button>
 
 			<div class="content">
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+				<p>The Democratic Debate is important because it give listeners and voters get a better understanding on who they can possibly vote for and the canadiates ideals and beliefs.</p>
 			</div>
-			<button class="collapsible">Open Section 3</button>
+			<button class="collapsible">Topics discussed during the Democratic Debate.</button>
 			<div class="content">
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+				<p>Some of the topics discussed during the debate were Health Care, the Economy, Medicare / Social Security, Reproductive Rights / Equal Pay, Security  and more.   </p>
 			</div>
 		</div>
 
